tests/baselines/reference/instanceQuery-0001.errors.txt
instanceQuery-0001.ts(7,5): error TS2322: Type 'ArrayBuffer' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
  Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
instanceQuery-0001.ts(18,5): error TS2322: Type 'ArrayBuffer' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
  Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
instanceQuery-0001.ts(31,18): error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type '(instanceof ArrayBuffer & ArrayBuffer)'.
  Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
instanceQuery-0001.ts(41,18): error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type '(instanceof ArrayBuffer & ArrayBuffer)'.
  Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
instanceQuery-0001.ts(43,9): error TS2322: Type 'Uint8Array' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
  Object type Uint8Array is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
instanceQuery-0001.ts(46,9): error TS2322: Type '(instanceof Uint8Array & Uint8Array)' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
  'new Uint8Array() instanceof ArrayBuffer' would evaluate as 'false'


==== instanceQuery-0001.ts (6 errors) ====
    namespace instof000 {}
    
    namespace instof0002 {
        declare let a: ArrayBuffer;
        declare let b: instanceof ArrayBuffer;
        a = b; // should not Error
        b = a; // should Error
        ~
!!! error TS2322: Type 'ArrayBuffer' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
!!! error TS2322:   Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
    
    }
    namespace instof0003 {
        let a: ArrayBuffer | undefined;
        let b = new ArrayBuffer(0);
        a = b; // should not error
    }
    namespace instof0003 {
        declare let a: ArrayBuffer;
        let b = new ArrayBuffer(0) as instanceof ArrayBuffer;
        b = a ; // should Error
        ~
!!! error TS2322: Type 'ArrayBuffer' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
!!! error TS2322:   Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
    }
    namespace instof005 {
        declare let a: instanceof ArrayBuffer;
        let b = new ArrayBuffer(0) as instanceof ArrayBuffer;
        b = a ; // should not Error
        a = b ; // should not Error
    }
    
    namespace instof006 {
    
        declare function safeDataView(buffer: instanceof ArrayBuffer): DataView;
    
        safeDataView(new ArrayBuffer(0)); // should error
                     ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type '(instanceof ArrayBuffer & ArrayBuffer)'.
!!! error TS2345:   Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
    
        safeDataView(new ArrayBuffer(0) as instanceof ArrayBuffer); // should not error
    
    }
    
    namespace instof007 {
    
        declare function safeDataView(buffer: instanceof ArrayBuffer): DataView;
        let a: ArrayBuffer = new Uint8Array()
        safeDataView(a); // should error
                     ~
!!! error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type '(instanceof ArrayBuffer & ArrayBuffer)'.
!!! error TS2345:   Object type ArrayBuffer is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
    
        let b: instanceof ArrayBuffer = new Uint8Array(); // now the error is here
            ~
!!! error TS2322: Type 'Uint8Array' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
!!! error TS2322:   Object type Uint8Array is not an instanceQuery type (i.e., has no 'instanceof') and therefore is not assignable to the instanceQuery type instanceof ArrayBuffer
        safeDataView(b); // should not error
    
        let c: instanceof ArrayBuffer = new Uint8Array() as instanceof Uint8Array; // still error, but better error explanation
            ~
!!! error TS2322: Type '(instanceof Uint8Array & Uint8Array)' is not assignable to type '(instanceof ArrayBuffer & ArrayBuffer)'.
!!! error TS2322:   'new Uint8Array() instanceof ArrayBuffer' would evaluate as 'false'
        safeDataView(c); // should not error
    }